--- a/cargo.toml
+++ b/cargo.toml
@@ -1,7 +1,4 @@
 [workspace]
 
-members = [
-    "backend",
-    "clients/*",
-    "crates/*"
-]
+members = ["backend", "clients/*", "crates/*"]
+exclude = ["clients/react-app"]
