--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -10,9 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@mantine/core": "^7.1.5",
+    "@mantine/dropzone": "^7.1.5",
+    "@mantine/form": "^7.1.5",
+    "@mantine/hooks": "^7.1.5",
+    "@tabler/icons-react": "^2.39.0",
     "@tauri-apps/api": "^1.5.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -20,6 +27,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
   }
