--- a/crates/parelthon_models/Cargo.toml
+++ b/crates/parelthon_models/Cargo.toml
@@ -22,8 +22,10 @@ chrono = { version = "0.4.24", features = ["serde"] }
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 strum = { version = "0.24.1", features = ["derive"] }
-geo-types = {version="0.7", features=["serde"]}
+geo-types = { version = "0.7", features = ["serde"] }
 
 rand_chacha = "0.3.1"
 rand_core = { version = "0.6", features = ["std"] }
 rand = "0.8.5"
+tempfile = "3"
+axum_typed_multipart = "0.10.1"
