--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^2.39.0",
     "@tauri-apps/api": "^1.5.0",
     "axios": "^1.5.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
