checkpoint: mvp basic backend / frontend

--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -14,13 +14,28 @@
     "@mantine/dropzone": "^7.1.5",
     "@mantine/form": "^7.1.5",
     "@mantine/hooks": "^7.1.5",
+    "@mantine/tiptap": "^7.1.5",
     "@tabler/icons-react": "^2.39.0",
+    "@tanstack/react-query": "^5.0.5",
+    "@tanstack/react-query-devtools": "^5.1.0",
     "@tauri-apps/api": "^1.5.0",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-subscript": "^2.1.12",
+    "@tiptap/extension-superscript": "^2.1.12",
+    "@tiptap/extension-text-align": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.5.1",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "wouter": "^2.12.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
