--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@flatten-js/interval-tree": "^1.1.1",
     "@mantine/core": "^7.1.5",
     "@mantine/dropzone": "^7.1.5",
     "@mantine/form": "^7.1.5",
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
+    "@types/lodash": "^4.14.200",
+    "@types/node": "^20.8.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
