--- a/cargo.toml
+++ b/cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 
-members = ["backend", "clients/*", "crates/*"]
+members = ["parelthon_server", "clients/*", "crates/*"]
 exclude = ["clients/react-app"]
