--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -29,6 +29,7 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "@visx/scale": "^3.3.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
