--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -32,6 +32,7 @@
     "@visx/scale": "^3.3.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -48,7 +49,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.0",
+    "postcss-preset-mantine": "^1.11.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
