--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -29,9 +29,12 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "@types/d3": "^7.4.3",
+    "@visx/group": "^3.3.0",
     "@visx/scale": "^3.3.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
+    "d3": "^7.8.5",
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
