--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -30,6 +30,7 @@
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@types/d3": "^7.4.3",
+    "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
     "@visx/scale": "^3.3.0",
     "axios": "^1.5.1",
