--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -30,8 +30,10 @@
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@types/d3": "^7.4.3",
+    "@types/geojson": "^7946.0.13",
     "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
+    "@visx/pattern": "^3.3.0",
     "@visx/scale": "^3.3.0",
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
@@ -43,7 +45,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "wouter": "^2.12.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
