--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -30,6 +30,7 @@
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@types/d3": "^7.4.3",
+    "@types/dom-mediacapture-transform": "^0.1.9",
     "@types/geojson": "^7946.0.13",
     "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
@@ -40,16 +41,22 @@
     "d3": "^7.8.5",
     "flubber": "^0.4.2",
     "framer-motion": "^10.16.4",
+    "graphology": "^0.25.4",
+    "howler": "^2.2.4",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flow": "^1.0.3",
     "react-hook-form": "^7.47.0",
+    "reactflow": "^11.10.1",
     "wouter": "^2.12.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.0",
+    "@types/howler": "^2.2.11",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.8",
     "@types/react": "^18.2.15",
