--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -50,6 +50,7 @@
     "react-flow": "^1.0.3",
     "react-hook-form": "^7.47.0",
     "reactflow": "^11.10.1",
+    "wavesurfer.js": "^7.4.12",
     "wouter": "^2.12.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
