--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -49,7 +49,9 @@
     "react-dom": "^18.2.0",
     "react-flow": "^1.0.3",
     "react-hook-form": "^7.47.0",
+    "react-player": "^2.13.0",
     "reactflow": "^11.10.1",
+    "standardized-audio-context": "^25.3.60",
     "wavesurfer.js": "^7.4.12",
     "wouter": "^2.12.1",
     "zod": "^3.22.4",
@@ -66,6 +68,7 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.11.0",
     "postcss-simple-vars": "^7.0.1",
+    "type-fest": "^4.8.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.4"
   }
