--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -11,24 +11,24 @@
   },
   "dependencies": {
     "@flatten-js/interval-tree": "^1.1.1",
-    "@mantine/core": "^7.1.5",
+    "@mantine/core": "^7.3.1",
     "@mantine/dropzone": "^7.1.5",
     "@mantine/form": "^7.1.5",
-    "@mantine/hooks": "^7.1.5",
-    "@mantine/tiptap": "^7.1.5",
-    "@tabler/icons-react": "^2.39.0",
-    "@tanstack/react-query": "^5.0.5",
+    "@mantine/hooks": "^7.3.1",
+    "@mantine/tiptap": "^7.3.1",
+    "@tabler/icons-react": "^2.44.0",
+    "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.1.0",
     "@tauri-apps/api": "^1.5.0",
     "@tiptap/extension-highlight": "^2.1.12",
-    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-subscript": "^2.1.12",
     "@tiptap/extension-superscript": "^2.1.12",
     "@tiptap/extension-text-align": "^2.1.12",
     "@tiptap/extension-underline": "^2.1.12",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/react": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
     "@types/d3": "^7.4.3",
     "@types/dom-mediacapture-transform": "^0.1.9",
     "@types/geojson": "^7946.0.13",
@@ -52,6 +52,7 @@
     "react-player": "^2.13.0",
     "reactflow": "^11.10.1",
     "standardized-audio-context": "^25.3.60",
+    "uuid": "^9.0.1",
     "wavesurfer.js": "^7.4.12",
     "wouter": "^2.12.1",
     "zod": "^3.22.4",
@@ -64,6 +65,7 @@
     "@types/node": "^20.8.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.0.3",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.11.0",
