--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -52,6 +52,7 @@
     "react-player": "^2.13.0",
     "reactflow": "^11.10.1",
     "standardized-audio-context": "^25.3.60",
+    "ts-results": "^3.3.0",
     "uuid": "^9.0.1",
     "wavesurfer.js": "^7.4.12",
     "wouter": "^2.12.1",
