--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.47.0",
     "react-player": "^2.13.0",
     "reactflow": "^11.10.1",
+    "shallowequal": "^1.1.0",
     "standardized-audio-context": "^25.3.60",
     "ts-results": "^3.3.0",
     "uuid": "^9.0.1",
@@ -66,6 +67,7 @@
     "@types/node": "^20.8.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/shallowequal": "^1.1.5",
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.0.3",
     "postcss": "^8.4.31",
