--- a/clients/react-app/package.json
+++ b/clients/react-app/package.json
@@ -45,6 +45,7 @@
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.3",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow": "^1.0.3",
